// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle.conic gapDegree 1`] = `
<DocumentFragment>
  <svg
    class="rc-progress-circle"
    role="presentation"
    viewBox="0 0 100 100"
  >
    <circle
      class="rc-progress-circle-trail"
      cx="50"
      cy="50"
      r="47"
      stroke="#D9D9D9"
      stroke-linecap="butt"
      stroke-width="1"
      style="stroke: #D9D9D9; stroke-dasharray: 237.88837704682715px 295.3097094374406; stroke-dashoffset: 0; transform: rotate(125deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
    />
    <mask
      id="rc_progress_TEST_OR_SSR-gradient-conic"
    >
      <circle
        class="rc-progress-circle-path"
        cx="50"
        cy="50"
        opacity="1"
        r="47"
        stroke="#FFF"
        stroke-linecap="butt"
        stroke-width="6"
        style="stroke-dasharray: 237.88837704682715px 295.3097094374406; stroke-dashoffset: 0; transform: rotate(125deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
      />
    </mask>
    <foreignobject
      height="100"
      mask="url(#rc_progress_TEST_OR_SSR-gradient-conic)"
      width="100"
      x="0"
      y="0"
    >
      <div
        style="width: 100%; height: 100%;"
      >
        <div
          style="width: 100%; height: 100%;"
        />
      </div>
    </foreignobject>
  </svg>
</DocumentFragment>
`;

exports[`Circle.conic should work 1`] = `
<DocumentFragment>
  <svg
    class="rc-progress-circle"
    role="presentation"
    viewBox="0 0 100 100"
  >
    <circle
      class="rc-progress-circle-trail"
      cx="50"
      cy="50"
      r="47"
      stroke="#D9D9D9"
      stroke-linecap="butt"
      stroke-width="1"
      style="stroke: #D9D9D9; stroke-dasharray: 295.3097094374406px 295.3097094374406; stroke-dashoffset: 0; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
    />
    <mask
      id="rc_progress_TEST_OR_SSR-gradient-conic"
    >
      <circle
        class="rc-progress-circle-path"
        cx="50"
        cy="50"
        opacity="1"
        r="47"
        stroke="#FFF"
        stroke-linecap="butt"
        stroke-width="6"
        style="stroke-dasharray: 295.3097094374406px 295.3097094374406; stroke-dashoffset: 0; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
      />
    </mask>
    <foreignobject
      height="100"
      mask="url(#rc_progress_TEST_OR_SSR-gradient-conic)"
      width="100"
      x="0"
      y="0"
    >
      <div
        style="width: 100%; height: 100%;"
      >
        <div
          style="width: 100%; height: 100%;"
        />
      </div>
    </foreignobject>
  </svg>
</DocumentFragment>
`;
